--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "linked/vim/bundle/vim-colors-solarized"]
 	path = linked/vim/bundle/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "linked/vim/bundle/sprinkles"]
+	path = linked/vim/bundle/sprinkles
+	url = git@github.com:ajgrf/sprinkles.git
