--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "linked/vim/bundle/vim-vividchalk"]
 	path = linked/vim/bundle/vim-vividchalk
 	url = git@github.com:tpope/vim-vividchalk.git
+[submodule "linked/vim/bundle/vim-speeddating"]
+	path = linked/vim/bundle/vim-speeddating
+	url = git://github.com/tpope/vim-speeddating.git
